fix: default visible columns (#8646)

--- a/frontend/src/css/layout.css
+++ b/frontend/src/css/layout.css
@@ -210,6 +210,7 @@ select {
 }
 
 .cur-view-path-btn.dir-tool-hide-column-setter.active:hover {
+  background-color: #d7e8ff;
   box-shadow: inset 0 0 0 2px #0000001a;
 }
 
